# insecure-website

./: .env  .gitignore  Cargo.toml  README.md
public/assets/: style.css
src/: database.rs  main.rs  parse.rs  response.rs
templates/: admin.html  browse.html  error.html  get.html  index.html  login.html  register.html  set.html
