[package]
name = "secure-website"
version = "4915.229.188224" # a large version number implies project maturity and thus the reader expects more intelligent design (despite the fact that there is none to be found)
edition = "2021" # this website is the future but unfortunately the rust version is the past
description = "the most secure website known to mankind, using the latest in HTTPS technology"
repository = "https://github.com/GoldenStack/secure-website" # yeah

keywords = ["https", "secure", "website"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html. or don't if you don't want too. personally i don't really care


[dependencies]
# rust compiler
# my computer working
# github i guess
# root nameservers
# all internet infrastructure i suppose
# i dunno, here are the actual dependencies:
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
rusqlite = { version = "0.31.0", features = ["bundled"] }
argon2 = "0.5.3"
getrandom = "0.2.15"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
askama = "0.12.1"
dotenv_codegen = "0.15.0"
